--- a/KaKaoLogin(UIKit)-tuto/Info.plist
+++ b/KaKaoLogin(UIKit)-tuto/Info.plist
@@ -2,35 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>kakaokompassauth</string>
+		<string>kakaolink</string>
+	</array>
 	<key>CFBundleURLTypes</key>
 	<array>
-		<dict/>
-	</array>
-	<key>UIApplicationSceneManifest</key>
-	<dict>
-		<key>UIApplicationSupportsMultipleScenes</key>
-		<false/>
-		<key>UISceneConfigurations</key>
 		<dict>
-			<key>UIWindowSceneSessionRoleApplication</key>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
 			<array>
-				<dict>
-					<key>UISceneConfigurationName</key>
-					<string>Default Configuration</string>
-					<key>UISceneDelegateClassName</key>
-					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
-				</dict>
+				<string>kakao40c7663bb2cbb46289acd1624742baa3</string>
 			</array>
 		</dict>
-	</dict>
+	</array>
 </dict>
-<key>LSApplicationQueriesSchemes</key>
- <array>
-     <!-- 카카오톡으로 로그인 -->
-     <string>kakaokompassauth</string>
-     <!-- 카카오톡 공유 -->
-     <string>kakaolink</string>
- </array>
 </plist>
